UPDATED: updated to nuts 0.8.1