@@ -302,21 +302,17 @@ public abstract class AbstractPlotContainer implements PlotContainer {
     }
 
     @Override
-    public void add(PlotComponent component, String path) {
-        if (path == null || path.isEmpty()) {
-            path = "/";
-        }
-        if (!path.startsWith("/")) {
-            path = "/" + path;
-        }
+    public void add(PlotComponent component, PlotPath path) {
 //        if (path == null || !path.startsWith("/")) {
 //            throw new IllegalArgumentException("Invalid path " + path);
 //        }
-        List<String> pathList = new ArrayList<>(Arrays.asList(StringUtils.split(path, "/")));
-        if (pathList.size() == 0) {
+        if(path==null){
+            path=PlotPath.ROOT;
+        }
+        if (path.size() == 0) {
             add(component);
         } else {
-            String name = pathList.get(0);
+            String name = path.get(0);
             int childIndex = indexOfPlotComponent(name);
             PlotContainer pp = null;
             if (childIndex < 0) {
@@ -329,8 +325,7 @@ public abstract class AbstractPlotContainer implements PlotContainer {
                     pp = add(childIndex, name);
                 }
             }
-            pathList.remove(0);
-            pp.add(component, StringUtils.join("/", pathList));
+            pp.add(component, path.removeFirst());
         }
     }
 
